--- a/p3.html
+++ b/p3.html
@@ -14,7 +14,7 @@
   <li><a href="p2.html">programming languages statistics</a></li>
    <li><a href="p3.html">programming languages picture</a></li>                                                                             <li><a href="p4.html">programming languages benefit</a></li>
 </ul>
-<img src="The-7-Most-In-Demand-Programming-Languages-of-2019-Inner-2.PNG" alt="title">
+<img src="The-7-Most-In-Demand-Programming-Languages-of-2019-Inner-2.png" alt="title">
 
 
 </body>
